# Soundboard

./: .gitignore  BluetoothListener_8hpp.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeFiles_23_821_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  CMakeFiles_23_821_81_2CompilerIdC_2CMakeCCompilerId_8c.html  CMakeFiles_2soundboard__server_8dir_2src_2BluetoothListener_8cpp_8o_8d.html  CMakeFiles_2soundboard__server_8dir_2src_2BluetoothWrapper_8c_8o_8d.html  CMakeFiles_2soundboard__server_8dir_2src_2Config_8cpp_8o_8d.html  CMakeFiles_2soundboard__server_8dir_2src_2SoundBoard_8cpp_8o_8d.html  CMakeFiles_2soundboard__server_8dir_2src_2main_8cpp_8o_8d.html  CMakeLists.txt  CNAME  Config_8cpp.html  Config_8hpp_source.html  ErrorCodes_8cpp_8o_8d.html  ErrorCodes_8hpp.html  ErrorCodes_8hpp_source.html  IListener_8hpp_source.html  IPlayer_8hpp_source.html  JsonParser_8cpp_8o_8d.html  JsonParser_8hpp.html  JsonParser_8hpp_source.html  MicrophonePlayer_8hpp.html  README.md  SoundBoard_8cpp.html  SoundBoard_8hpp_source.html  SoundManager_8cpp.html  SoundManager_8cpp_8o_8d.html  SoundManager_8hpp_source.html  SpeakerPlayer_8hpp.html  SpeakerPlayer_8hpp_source.html  build_2CMakeFiles_2soundboard__server_8dir_2src_2BluetoothListener_8cpp_8o_8d.html  build_2CMakeFiles_2soundboard__server_8dir_2src_2BluetoothWrapper_8c_8o_8d.html  build_2CMakeFiles_2soundboard__server_8dir_2src_2SoundBoard_8cpp_8o_8d.html  classBluetoothListener-members.html  classConfig.html  classIListener-members.html  classIListener.html  classIPlayer.html  (+30 more)
doc/: BluetoothListener_8cpp.html  (+21 more)
(+302 files in other folders)
